--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "lodash": "^4.17.21",
     "lucide-react": "^0.419.0",
     "next": "14.2.5",
+    "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
     "react-loading-skeleton": "^3.4.0"
   },
   "devDependencies": {
+    "@types/lodash": "^4.17.7",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
